# rig-agent-pipeline-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs
