[package]
name = "rig-agent-pipeline-example"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = { version = "0.6.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
csv = "1.2"
schemars = "0.8"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }